--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   color: #fff;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  background-image: linear-gradient(to bottom, #020917, #101725);
+  background-image: linear-gradient(to bottom, #ff7606, #ea7805);
 }
